Thu Jun 18 20:32:11 2009  Tadayoshi Funaba  <tadf@dotrb.org>

	* numeric.c (num_numerator, num_denominator): use
	  to_r [ruby-core:23910].

Thu Jun 18 16:21:05 2009  Ryan Davis  <ryand-ruby@zenspider.com>

	* lib/minitest/*.rb: Imported minitest 1.4.0 r5083.
	* test/minitest/*.rb: ditto.

Thu Jun 18 01:35:51 2009  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* numeric.c (flo_cmp): Infinity is greater than any bignum
	  number.  [ruby-dev:38672]

	* bignum.c (rb_big_cmp): ditto.

Thu Jun 18 01:29:16 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* file.c (file_expand_path): drive letter is ascii only.
	  [ruby-dev:38612]

Thu Jun 18 01:09:27 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in (ridir, RI_BASE_NAME): fixed for path expansion.
	  [ruby-core:23876]

Wed Jun 17 23:46:08 2009  Tadayoshi Funaba  <tadf@dotrb.org>

	* rational.c (nurat_coerce): accepts Complex when the imag is
	  exact zero.

Wed Jun 17 21:25:54 2009  Tadayoshi Funaba  <tadf@dotrb.org>

	* bignum.c (rb_big_fdiv): checks whether the given second argument
	  can be converted to float properly.

	* numeric.c (fix_fdiv): calls rb_big_fdiv when the given second
	  argument is a bignum.

	* rational.c (nurat_fdiv): should calculate Float(x/y), not
	  Float(x)/Float(y).

Wed Jun 17 16:57:40 2009  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* load.c (rb_f_require): RDoc updated.  a patch from Run Paint Run
	  Run in [ruby-core:23833].

	* load.c (rb_mod_autoload): ditto.  [ruby-core:23835]

Wed Jun 17 14:37:18 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* sample/test.rb (valid_syntax?): skips BOM.  [ruby-dev:38666]

	* test/ruby/test_system.rb (TestSystem#valid_syntax?): ditto.

Wed Jun 17 13:54:18 2009  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* ext/strscan/strscan.c (Init_strscan): remove obsolete
	  matchedsize method, use matched_size instead.  [ruby-dev:38591]

Wed Jun 17 12:37:37 2009  Yukihiro Matsumoto  <matz@ruby-lang.org>
